<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_subtitle">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home"
                    android:title="@string/nav_menu_option1" />
            </menu>
        </item>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_subtitle2">
            <menu>
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_nav_exit"
                    android:title="@string/nav_subtitle2" />
            </menu>
        </item>
    </group>
</menu>