<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:id="@+id/activity_login_layout"
    tools:context=".Activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdgeLength="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:id="@+id/activity_login">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/img_digitalhome_logo" />

        <!-- Login Module -->
        <RelativeLayout
            android:id="@+id/layout_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_below="@+id/ivLogo"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:src="@drawable/img_default"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/login_icon_border" />

            <EditText
                android:id="@+id/etUserAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/ivIcon"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:inputType="text|textEmailAddress"
                android:maxLines="1"
                android:textSize="18sp"
                android:color="@color/edit_text_stroke"
                android:hint="@string/login_username"
                android:background="@xml/custom_edit_text" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/etUserAccount"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textSize="18sp"
                android:color="@color/edit_text_stroke"
                android:hint="@string/login_password"
                android:background="@xml/custom_edit_text" />

            <CheckBox
                android:id="@+id/cboKeep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etPassword"
                android:layout_marginTop="10dp"
                android:checked="true"
                android:textStyle="bold"
                android:textColor="@color/text_primary_color"
                android:text="@string/login_keep_status"
                android:buttonTint="@color/accent_color" />

            <com.dd.CircularProgressButton
                android:id="@+id/btnOK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/cboKeep"
                android:layout_marginTop="10dp"
                android:textColor="@color/text_primary_color"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cpb_textIdle="@string/login_login"
                app:cpb_cornerRadius="40dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_iconError="@drawable/ic_action_cancel"
                app:cpb_selectorIdle="@xml/idle_state_selector"  />

        </RelativeLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
